--- a/通路API/API/Gomaji_API/Gomaji_API/Gomaji_API.csproj
+++ b/通路API/API/Gomaji_API/Gomaji_API/Gomaji_API.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WriteLog.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
